tests/fails/f31.t
require("fail")

terra foo()
   var a : struct {}
   return a.b + 4
end
foo()
